# ghostbridge-api

./: .audit-ci.json  .gitignore  .gitlab-ci.yml  APK_BUILD_SOLUTION.md  App.tsx  BUILD_APK.sh  DATA_SAFETY.md  DEPLOYMENT_GUIDE.md  G-ENGINE-PATCH.md  NODE_VERIFICATION.js  PLAY_STORE_CHECKLIST.md  PROJECT_SUMMARY_COMPLETE.md  QUANTUM_GRAVITY_README.md  QUICK_APK_GUIDE.md  README.md  README_100_PERCENT.md  REAL_FEATURES_CHANGELOG.md  REVOLUTIONARY_FEATURES_COMPLETE.md  SECURITY_ANALYSIS_REPORT.md  SIMPLE_VERIFICATION.js  STORE_ASSETS.md  TEST_VERIFICATION.js  UPDATE_LOGO_INSTRUCTIONS.md  app.json  bitrise.yml  build-and-deploy.sh  eas.json  metro.config.js  package-lock.json  package.json  privacy-policy.html  setup-gitlab.sh  stego-test.js  vercel-index.js  vercel-package.json  vercel-single-file.js  vercel.json
.circleci/: config.yml
.github/workflows/: android-build.yml  android.yml  appcircle-build.yml  build-apk.yml  codemagic-build.yml  eas-build.yml  simple-build.yml  supply-chain-security.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  ghostbridge-release-key.jks  google-services.json  google-services.json.template  proguard-rules.pro
android/app/src/main/cpp/: AdvancedSideChannelProtection.cpp  CMakeLists.txt  ConstantTimeCrypto.cpp  SecureMemoryWiper.cpp
api/bridge/: create.js  read.js
firebase/: firestore.rules
functions/: index.js
ios/: Podfile
ios/GhostBridgeApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/GhostBridgeApp.xcodeproj/: project.pbxproj
src/components/: QRCodeScanner.js  VoiceRecorder.js
src/crypto/: ColdBootProtection.js  CompressionAwareSteganography.js  DoubleRatchet.js  GhostCrypto.js  HSMIntegration.js  MemoryEncryption.js  NodeSteganography.js  OnionRouting.js  RealIntrusionDetection.js  RealMLIntrusionDetection.js  RealMessageBridge.js  RealPostQuantumCrypto.js  RealSteganography.js  RealTorComplete.js  RealTorProtocol.js  SimpleMessageBridge.js  cryptoPolyfill.js
src/firebase/: AuthManager.js  SequentialIDManager.js  firebaseConfig.js
src/intelligence/: AdaptiveThreatIntelligence.js
src/messaging/: MessageManager.js
src/ml/: PoisoningResistantLearning.js  RealFederatedLearning.js  RealTensorFlowAI.js
src/navigation/: MainNavigator.js
src/network/: P2PManager.js  (+6 more)
tests/: gravity-unit-test.js  quantum-gravity-demo.js
(+82 files in other folders)
